--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <div class="container"></div>
+    <script type="text/javascript" src="https://cdn.pubnub.com/pubnub-3.7.12.min.js"></script>
     <script type="text/javascript" src="./dist/app-browserify.js"></script>
 </body>
 
